--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "nodemon .\\Server\\index.js"
+    "start": "node .\\Server\\index.js"
   },
   "author": "Sabarno",
   "license": "ISC",
